<resources>
    <string name="app_name">CompluAcoge</string>
    <string name="sp_key_language" translatable="false">sp_key_language</string>
    <string name="language_code">en</string>
    <string name="sp_dark_mode_value" translatable="false">sp_dark_mode_value</string>
    <string name="sp_black_better_than_gray" translatable="false">sp_black_better_than_gray</string>
    <string name="sp_keep_screen_on" translatable="false">sp_keep_screen_on</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="forgot_log_in">Forgot your password?</string>
    <string name="without_account">Don\'t have an account?</string>
    <string name="incorrect_passwd_account">Incorrect password or account</string>
    <string name="invalid_format">Invalid format</string>
    <string name="invalid_passwd">Password must contain 8-15 alphanumeric characters, \'-\\\' or \'.\'</string>
    <string name="name">Name</string>
    <string name="confirm_passwd">Confirm password</string>
    <string name="description">Description</string>
    <string name="not_same_passwd">Passwords are not equal!</string>
    <string name="invalid_name">Name must contain between 3 and 20 characters, using only letters and spaces</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="user">User</string>
    <string name="sign_out">Sign out</string>
    <string name="find_your_account">Find your account</string>
    <string name="forgot_description">Enter the email linked to your account and we\'ll send you an email.</string>
    <string name="recover">Recover</string>
    <string name="email_sent">Email sent</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="keywords">Keywords</string>
    <string name="procedures">Procedures</string>
    <string name="open_procs_num">%d\nOpen\nprocedures</string>
    <string name="closed_procs_num">%d\nClosed\nprocedures</string>
    <string name="percent_example" translatable="false">0%</string>
    <string name="percent" translatable="false">%d \%</string>
    <string name="closed_procs">Closed procedures</string>
    <string name="open_procs">Open procedures</string>
    <string name="social_worker">Social worker</string>
    <string name="institution">Institution</string>
    <string name="choose_type_user">Choose type of user</string>
    <string name="num_sw">Social worker number</string>
    <string name="account_data">Account data</string>
    <string name="must_write_keywords">Write at least one keyword</string>
    <string name="must_write_sw">Write your social worker number</string>
    <string name="settings">Settings</string>
    <string name="expired">Expired</string>
    <string name="finished">Finished</string>
    <string name="expl_num_sw">We need to confirm your code</string>
    <string name="expl_keywords">Tell us some of your interests</string>
    <string name="expl_descrip">Profile description</string>
    <string name="drafts">Drafts</string>
    <string name="available_procs_num">Procedures (%d)</string>
    <string name="drafts_num">Drafts (%d)</string>
    <string name="version_num">version %d</string>
    <string name="empty_procs">There are no procedures</string>
    <string name="empty_drafts">There are no drafts</string>
    <string name="empty_open">There are no open procedures</string>
    <string name="empty_closed">There are no closed procedures</string>
    <string name="create_procedure">Create procedure</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="publish">Publish</string>
    <string name="proc_name">Procedure name</string>
    <string name="proc_short_desc">Brief explanation of this procedure</string>
    <string name="proc_long_desc">Full explanation of this procedure</string>
    <string name="long_desc">Long description</string>
    <string name="short_desc">Short description</string>
    <string name="procedure">Procedure</string>
    <string name="link_next">Add existing next step</string>
    <string name="create_next">Create an empty next node</string>
    <string name="step_name">Step name</string>
    <string name="step_desc">Step description</string>
    <string name="next_step">Next step</string>
    <string name="initial_step">Beginning</string>
    <string name="steps">Steps</string>
    <string name="previous_step">Previous step</string>
    <string name="current_step">Current step</string>
    <string name="step">Step</string>
    <string name="mark_as_end">Mark as end</string>
    <string name="unmark_as_end">Unmark as end</string>
    <string name="step_delete_error">It has dependent next steps</string>
    <string name="error_creating_draft">Error creating draft</string>
    <string name="without_name">No name</string>
    <string name="save_changes">Save changes</string>
    <string name="error_updating_draft">Error updating draft</string>
    <string name="edit_procedure">Edit procedure</string>
    <string name="error_deleting_draft">Error deleting draft</string>
    <string name="error_publishing_draft">Error publishing draft</string>
    <string name="error_publishing_not_found">Procedure not found</string>
    <string name="error_publishing_name">Name of procedure is missing</string>
    <string name="error_publishing_short_desc">Short description is missing</string>
    <string name="error_publishing_long_desc">Long description is missing</string>
    <string name="error_publishing_end_null">There is no end node</string>
    <string name="error_publishing_end_multiple">There is a node not connected to the end</string>
    <string name="error_publishing_start_null">There is no start node</string>
    <string name="delete_draft">Delete draft</string>
    <string name="delete_proc">Delete procedure</string>
    <string name="finish">Finish</string>
    <string name="create_new_version">Create new version</string>
    <string name="take_it_off">Take this version off</string>
    <string name="reached_end">You\'ve reached the end!</string>
    <string name="balloon" translatable="false">🎈</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="discard_changes">Do you want to discard changes?</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="versions">Versions</string>
    <string name="_1" translatable="false">1</string>
    <string name="empty">Empty</string>
    <string name="error_closing">Error taking off the procedure</string>
    <string name="closed">Closed</string>
    <string name="picture_image">Profile picture</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_photo">Remove image</string>
    <string name="edit_back_picture">Edit background picture</string>
    <string name="back_image">Background image</string>
    <string name="uploading_failed">Uploading failed</string>
    <string name="open_num">Open (%d)</string>
    <string name="closed_num">Closed (%d)</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
    <string name="about_desc">This app was developed by Boris Carballa as his Bachelor Thesis in Computer Science, supervised by Rubén Fuentes and Alfonso González.</string>
    <string name="okay">Okay</string>
    <string name="deleting_failed">Deleting failed</string>
    <string name="tags">Tags</string>
    <string name="tags_proc">Tags of this procedure</string>
    <string name="error_publishing_tags">Write at least one tag</string>
    <string name="closed_lock" translatable="false">🔒</string>
    <string name="closed_with_lock">Closed 🔒</string>
    <string name="based_on">Based on</string>
    <string name="choose_which_view">Which one do you want to see?</string>
    <string name="start">Start</string>
    <string name="see">See</string>
    <string name="add_image">Add image</string>
    <string name="error_uploading_photos">Error uploading photos</string>
    <string name="error_deleting_photos">Error deleting photo</string>
    <string name="error_loading_image">Image couldn\'t be loaded</string>
    <string name="account_pending">Your account is pending to be approved</string>
    <string name="delete_account">Delete account</string>
    <string name="enter_passwd">Enter your password to confirm</string>
    <string name="error_deleting_account">Error deleting account</string>
    <string name="incorrect_passwd">Incorrect password</string>
    <string name="wrong_field">Invalid field text!</string>
    <string name="search">Search</string>
    <string name="searching">Searching…</string>
    <string name="error_updating_proc">Error updating proc</string>
    <string name="error_deleting_proc">Error deleting proc</string>
    <string name="sw">SW</string>
    <string name="continue_">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings related to login -->
</resources>